--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>
-        swal("Welcome My Friend!!","This is very special code! I tried so hard for making this!!");
+        swal("Welcome,Purpose of the program to track of your jee preparation ");
         function main() {
-            if ((document.getElementById("s").value).trim().toLowerCase() == "rishavt" || (document.getElementById("s").value).trim().toLowerCase() == "rishu" || (document.getElementById("s").value).trim().toLowerCase() == "lizu" || (document.getElementById("s").value).trim().toLowerCase() == "leedu" || (document.getElementById("s").value).trim().toLowerCase() == "lishav" || (document.getElementById("s").value).trim().toLowerCase() == "love" || (document.getElementById("s").value).trim().toLowerCase() == "rishavliza" || (document.getElementById("s").value).trim().toLowerCase() == "lizarishav" || (document.getElementById("s").value).trim().toLowerCase() == "lizas") {
+            if ((document.getElementById("s").value).trim().toLowerCase() == "shikhakumari0000" || (document.getElementById("s").value).trim().toLowerCase() == "python1000" || (document.getElementById("s").value).trim().toLowerCase() == "marvelstudios" || (document.getElementById("s").value).trim().toLowerCase() == "businessproposal" || (document.getElementById("s").value).trim().toLowerCase() == "holi2024happy" || (document.getElementById("s").value).trim().toLowerCase() == "iondigital" || (document.getElementById("s").value).trim().toLowerCase() == "centralpublicschool" || (document.getElementById("s").value).trim().toLowerCase() == "magnuscarlsen" || (document.getElementById("s").value).trim().toLowerCase() == "ezsnippet") {
                 window.location.href = 'feelin.html'
             } else {
                 window.location.href = 'study.html'
