--- a/indexx.html
+++ b/indexx.html
@@ -3,14 +3,14 @@
 <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Happy Birthday!</title>
+        <title>Happy Holi!</title>
 </head>
 <body>
-        <h1>Happy Birthday, Lizu!</h1>
-        <p>Dear Lizu,</p>
-        <p>On this special day, I want to wish you a very happy birthday! You bring so much joy and happiness into my life, and I am grateful for every moment we spend together.</p>
-        <p>You are an amazing person with a heart of gold, and I feel incredibly lucky to have you in my life. I hope your day is filled with love, laughter, and all your favorite things.</p>
-        <p>Thank you for being my best friend. I love you more than words can express, and I look forward to celebrating many more birthdays with you in the years to come.</p>
-        <p>Happy birthday, Dost!</p>
+        <h1>Happy Holi, !</h1>
+        <p>Happy Holi 2024 friends,</p>
+        <p>On this special day, I want to wish you a very happy Holi.This project is made with the help of python,html,css,js to celebrate this day plus for the practice of upcoming computer exam.</p>
+        <p>You are an amazing person with a heart of gold, and I feel incredibly lucky to have you in my life. I hope this Holi 2024 brings joy, laughter, and all your favorite things in life.</p>
+        <p>Thank you for watching the complete code and I hope that u liked it as well.</p>
+        <p>Happy Holi,2024!</p>
 </body>
 </html>
