--- a/feelin.html
+++ b/feelin.html
@@ -31,7 +31,7 @@ Thank you! -->
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>
-        swal("WELCOME!!", "Let's Have a beautiful tour of the world to see the beautiful things")
+        swal("WELCOME!!", "Happy Holi 2024 everyone ")
         function Play() {
             document.getElementById('vid').play();
         }
